# docs/swagger.json
@@ -2171,6 +2171,9 @@
                 "tunnel": {
                     "$ref": "#/definitions/agent.TunnelStatus"
                 },
+                "warp": {
+                    "$ref": "#/definitions/agent.WarpStatus"
+                },
                 "workloads": {
                     "type": "array",
                     "items": {
@@ -2198,6 +2201,19 @@
                 "running": {
                     "type": "boolean",
                     "example": true
+                }
+            }
+        },
+        "agent.WarpStatus": {
+            "type": "object",
+            "properties": {
+                "enabled": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "ip": {
+                    "type": "string",
+                    "example": "100.96.0.20"
                 }
             }
         },
